<resources>
    <string name="app_name">Genk News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HomeVn">Trang chủ</string>
    <string name="latest">Mới nhất</string>
    <string name="video">Video</string>
    <string name="menu">Menu</string>
    <string name="menuTitle">MENU</string>
    <string name="latestUpper">MỚI NHẤT</string>
    <string name="videoUpper">VIDEO</string>
    <string name="zoneName">ZONE NAME</string>
    <string name="categoryName">CATEGORY NAME</string>
    <string name="no_internet">Lỗi kết nối</string>
    <string name="retry">Thử lại</string>
    <string name="search">Tìm kiếm</string>
    <string name="category">Chuyên mục</string>
    <string name="back">Back</string>
    <string name="search_title">TÌM KIẾM</string>
    <string name="cancel">HỦY</string>
    <string name="title">TITLE</string>
    <string name="avatar_new_search">avatarNewSearch</string>
    <string name="avatar_new_relation">avatarNewRelation</string>
    <string name="description">DESCRIPTION</string>
    <string name="category_new_search">CATEGORY</string>
    <string name="date_time">DATE TIME</string>
    <string name="source">SOURCE</string>
    <string name="newsRelation">Tin liên quan</string>
    <string name="related_news">RELATED NEWS</string>
    <string name="app_name_avatar">APP_NAME_AVATAR</string>
    <string name="addImage">addImage</string>
    <string name="close_image">Close image</string>
    <string name="theo">Theo</string>
    <string name="image_zone">Image zone</string>
    <string name="button_copy">Button Copy</string>
    <string name="image_send">image send</string>
    <string name="send">Gửi</string>
    <string name="button_close">Button close</string>
    <string name="_10">+10</string>
    <string name="read_more">Đọc thêm</string>
</resources>