<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/articleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/title"
        android:textColor="@color/colorTextCategory"
        android:textSize="@dimen/text_26"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/articleImage"
        android:layout_width="@dimen/width_ava"
        android:layout_height="@dimen/height_ava"
        android:layout_marginTop="@dimen/space_large"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@id/articleTitle"
        app:layout_constraintTop_toBottomOf="@id/articleTitle"
        android:contentDescription="@string/avatar_new_search"/>

    <TextView
        android:id="@+id/articleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/description"
        android:textSize="@dimen/text_16"
        android:textColor="@color/colorTextCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/articleImage"
        app:layout_constraintTop_toTopOf="@+id/articleImage" />

    <TextView
        android:id="@+id/articleCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space"
        android:text="@string/category_new_search"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textSize="@dimen/text_14"
        android:textColor="@color/colorTextCategory"
        app:layout_constraintStart_toStartOf="@id/articleDescription"
        app:layout_constraintTop_toBottomOf="@+id/articleDescription" />



    <TextView
        android:id="@+id/articleDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:textSize="@dimen/text_14"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorTextCategory"
        app:layout_constraintStart_toEndOf="@id/articleCategory"
        app:layout_constraintTop_toTopOf="@id/articleCategory"
        app:layout_constraintBottom_toBottomOf="@id/articleCategory"/>

</androidx.constraintlayout.widget.ConstraintLayout>