<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/articleImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/avatar_new_search"/>

    <TextView
        android:id="@+id/articleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space"
        android:layout_marginTop="@dimen/space_large"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/title"
        android:textColor="@color/colorTextCategory"
        android:textSize="@dimen/text_26"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/articleImage" />

    <TextView
        android:id="@+id/articleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/description"
        android:textSize="@dimen/text_16"
        android:textColor="@color/colorTextCategory"
        app:layout_constraintEnd_toEndOf="@id/articleTitle"
        app:layout_constraintStart_toStartOf="@+id/articleTitle"
        app:layout_constraintTop_toBottomOf="@+id/articleCategory" />

    <TextView
        android:id="@+id/articleCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/category_new_search"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textSize="@dimen/text_12"
        android:textColor="@color/colorTextCategory"
        app:layout_constraintStart_toStartOf="@id/articleTitle"
        app:layout_constraintTop_toBottomOf="@+id/articleTitle" />



    <TextView
        android:id="@+id/articleDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/date_time"
        android:textSize="@dimen/text_12"
        android:paddingBottom="@dimen/space_smaller"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorTextCategory"
        app:layout_constraintStart_toEndOf="@id/articleCategory"
        app:layout_constraintTop_toBottomOf="@+id/articleTitle"/>

    <TextView
        android:id="@+id/theo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/theo"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorTextCategory"
        app:layout_constraintStart_toStartOf="@id/articleDescription"
        app:layout_constraintTop_toBottomOf="@+id/articleDescription" />

    <TextView
        android:id="@+id/articleSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginStart="@dimen/space_small"
        android:text="@string/source"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorTextCategory"
        app:layout_constraintStart_toEndOf="@id/theo"
        app:layout_constraintTop_toBottomOf="@+id/articleDescription" />

    <ImageView
        android:id="@+id/closeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        android:layout_marginEnd="@dimen/space_small"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/articleSource"
        app:layout_constraintEnd_toStartOf="@id/articleRelation"
        android:contentDescription="@string/close_image"/>

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add"
        android:layout_marginEnd="@dimen/space_small"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/articleSource"
        app:layout_constraintEnd_toStartOf="@id/articleRelation"
        android:contentDescription="@string/close_image"/>

    <TextView
        android:id="@+id/articleRelation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsRelation"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorNewsRelation"
        app:layout_constraintTop_toTopOf="@id/articleSource"
        app:layout_constraintEnd_toEndOf="@id/articleDescription"
        app:layout_constraintTop_toBottomOf="@+id/articleDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/NewsRelation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/theo"
        android:background="@color/colorNewsRelationBackground">

        <TextView
            android:id="@+id/txtNewsRelation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:fontFamily="sans-serif"
            android:text="@string/newsRelation"
            android:textColor="@color/colorTextCategory"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerNewsRelation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:layout_marginBottom="@dimen/space"
            app:layout_constraintTop_toBottomOf="@id/txtNewsRelation"
            android:background="@color/colorNewsRelationBackground"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>