<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomToolBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomToolBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/primary_inverse"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/imgCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space"
            android:contentDescription="@string/button_copy"
            android:padding="@dimen/space"
            android:src="@drawable/more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/colorSecondary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space"
            app:layout_constraintEnd_toStartOf="@id/imgCopy"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/imgSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_send"
                android:padding="@dimen/space"
                android:src="@drawable/send"
                app:tint="@color/colorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textSize="@dimen/text_20"
                app:layout_constraintStart_toEndOf="@id/imgSend"
                app:layout_constraintTop_toTopOf="@id/imgSend"
                app:layout_constraintBottom_toBottomOf="@id/imgSend"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_with_radius"
            android:contentDescription="@string/button_close"
            android:padding="@dimen/space"
            android:src="@drawable/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.525" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/seeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <include layout="@layout/read_more_button"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>