<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/menuTitle"
        android:textColor="@color/primary_inverse"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginEnd="@dimen/space"
        android:layout_marginStart="@dimen/space"
        android:padding="@dimen/space"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:drawableTint="@color/colorSecondary"
        android:background="@drawable/edit_text_menu"
        android:drawableStart="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuTitle" />

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginStart="@dimen/space"
        android:layout_marginEnd="@dimen/space"
        android:text="@string/category"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/searchEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_inverse"
        android:paddingBottom="50dp"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/space_large"
        app:layout_constraintTop_toBottomOf="@+id/category"
        tools:layout_editor_absoluteX="0dp" />

    <include
        android:id="@+id/itemSearchError"
        layout="@layout/item_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/paginationProgressBar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>